[feat] : SwaggerExampleExceptions 타입 클래스 문서화